# 3DSoftwareRendering

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_and_run.sh  compile_commands.json  renderer
.cache/clangd/index/: constants.h.2554449977AB489E.idx  constants.h.CC02D8BC9B216F96.idx  display.cpp.4167299DE95D6974.idx  display.cpp.4175AF13AFDC7060.idx  display.hpp.0352D964FD7E8B1B.idx  display.hpp.2E685BA3344E3074.idx  main.c.50FAFC20C2EFF428.idx  main.cpp.385FD410B5B7D324.idx  main.cpp.6D84FC0DA847F6D3.idx  main.cpp.A595111BFA8F9730.idx  main.cpp.FF8B629FA4118C25.idx  mesh.cpp.9370CD292E35AE56.idx  mesh.cpp.FD3B628ED6B43BBA.idx  mesh.hpp.3B609C2181CAF5ED.idx  mesh.hpp.3D5F7301924BCF67.idx  triangle.cpp.FA21DDD0D6481E8D.idx  triangle.hpp.1C507CEC0D3AA248.idx  triangle.hpp.3954AAEE326C0037.idx  vector.hpp.06200E30C6A68247.idx  vector.hpp.2EFDCDA06BCB8623.idx
include/: display.hpp  light.hpp  matrix.hpp  mesh.hpp  triangle.hpp  vector.hpp
src/: display.cpp  light.cpp  main.cpp  matrix.cpp  mesh.cpp  renderer  triangle.cpp
